--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
