--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@svgr/webpack": "^8.1.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
+    "motion": "^12.9.5",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
