--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
