--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "coverage": "jest --verbose --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
